# balbharti_rag

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run.sh
kb/: knowledgebase.json
scripts/: build_kb_index.py  eval.py  query.py  serve.py  smoke_test_offline.py
src/: __init__.py  bm25_index.py  config.py  dense_index.py  embedder.py  fusion.py  generate.py  kb.py  llm_client.py  normalize.py  pipeline.py  query_expand.py  query_intent.py  query_validate.py  reranker.py  retrieve.py  tokenize.py  tts.py
tests/: __init__.py  rag_suite.yaml  test_pipeline.py
