[project]
name = "balbharti-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "hf-cli>=0.1",
    "huggingface-hub>=0.36.2",
    "indic-transliteration>=2.3.82",
    "numpy==2.2.1",
    "pydantic==2.10.4",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "sentence-transformers==3.3.1",
    "uvicorn==0.34.0",
]
